# hcp_gb_generator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: warrington_1975_table_I_ca_sqrt8over3.txt
examples/: getting_started.ipynb  ti_grain_boundaries.py
hcp_csl_enumerator/: __init__.py  __main__.py  _builder.py  _core.py
hcp_gb_generator/: __init__.py  __main__.py  _bicrystal.py  _builder.py  _core.py
tests/: test_coordinate_utils.py  test_warrington_1975.py
