[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hcp-gb-generator"
version = "0.1.0"
description = "Enumerate CSL grain boundaries for HCP crystals and construct ASE bicrystal structures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "ase>=3.22",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
hcp-gb = "hcp_gb_generator.__main__:main"

[tool.setuptools.packages.find]
include = ["hcp_gb_generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: tests requiring extended axis search (max_idx >= 9)",
]
